implemented nvs_storage management

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,5 @@ platform = espressif32
 board = nodemcu-32s
 board_build.partitions = huge_app.csv
 framework = arduino
-lib_deps = 
-	lennarthennigs/ESP Telnet@^1.1.1
-	marvinroger/AsyncMqttClient@^0.9.0
-	rpolitex/ArduinoNvs@^2.5
 upload_port = COM5
+build_flags = -std=c++17
